--- a/Blank Theme.rapidweavertheme/Contents/styles.css
+++ b/Blank Theme.rapidweavertheme/Contents/styles.css
@@ -996,6 +996,11 @@ p.exif-user-comment {
 
 /* @group Contact Form */
 
+.rw-contact-form {
+	
+}
+
+
 .message-text {
 	
 }
@@ -1005,6 +1010,10 @@ p.exif-user-comment {
 }
 
 .form-input-field {
+	
+}
+
+.form-select-field {
 	
 }
 
